--- a/rulex-lib/Cargo.toml
+++ b/rulex-lib/Cargo.toml
@@ -15,3 +15,11 @@ dbg = []
 thiserror = "1.0.30"
 logos = "0.12.0"
 nom = "7.1.0"
+
+[dev-dependencies]
+criterion = "0.3.5"
+
+[[bench]]
+# run benchmarks with `cargo criterion -p rulex`
+name = "benchmark"
+harness = false
