--- a/rulex-bin/Cargo.toml
+++ b/rulex-bin/Cargo.toml
@@ -14,5 +14,12 @@ path = "src/main.rs"
 
 [dependencies]
 atty = "0.2.14"
-clap = { version = "3.1.0", features = ["derive"] }
-rulex = { path = "../rulex-lib", version = "0.1.0" }
+
+[dependencies.rulex]
+version = "0.1.0"
+path = "../rulex-lib"
+
+[dependencies.clap]
+version = "3.1.0"
+default-features = false
+features = ["std", "derive"]
