Add lib to default workspace members, better optimize alternation that mixes single chars and strings, refactor char classes, add \X and \R support, fix codegen bug where parentheses were missing

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [workspace]
 members = ["./rulex-lib", "./rulex-bin"]
-default-members = ["./rulex-bin"]
+default-members = ["./rulex-bin", "./rulex-lib"]
 
 [profile.release]
 lto = "thin"
