--- a/rulex-lib/Cargo.toml
+++ b/rulex-lib/Cargo.toml
@@ -18,8 +18,14 @@ nom = "7.1.0"
 
 [dev-dependencies]
 criterion = "0.3.5"
+atty = "0.2.14"
 
 [[bench]]
 # run benchmarks with `cargo criterion -p rulex`
 name = "benchmark"
+harness = false
+
+[[test]]
+name = "it"
+path = "./tests/testcases.rs"
 harness = false
