--- a/rulex-lib/Cargo.toml
+++ b/rulex-lib/Cargo.toml
@@ -19,6 +19,7 @@ nom = "7.1.0"
 [dev-dependencies]
 criterion = "0.3.5"
 atty = "0.2.14"
+once_cell = "1.9.0"
 
 [[bench]]
 # run benchmarks with `cargo criterion -p rulex`
@@ -27,5 +28,5 @@ harness = false
 
 [[test]]
 name = "it"
-path = "./tests/testcases.rs"
+path = "./tests/it/main.rs"
 harness = false
