--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [workspace]
-members = ["./rulex-lib", "./rulex-bin"]
+members = ["./rulex-lib", "./rulex-bin", "./benchmark"]
 default-members = ["./rulex-bin", "./rulex-lib"]
 
 [profile.release]
