Allow fine-grained negations, extend README

--- a/rulex-bin/Cargo.toml
+++ b/rulex-bin/Cargo.toml
@@ -23,4 +23,4 @@ features = ["dbg"]
 [dependencies.clap]
 version = "3.1.0"
 default-features = false
-features = ["std", "derive"]
+features = ["std", "derive", "wrap_help"]
