--- a/rulex-lib/Cargo.toml
+++ b/rulex-lib/Cargo.toml
@@ -16,6 +16,7 @@ dbg = []
 thiserror = "1.0.30"
 logos = "0.12.0"
 nom = "7.1.0"
+miette = { version = "4.2.1", optional = true }
 
 [dev-dependencies]
 atty = "0.2.14"
