--- a/rulex-lib/Cargo.toml
+++ b/rulex-lib/Cargo.toml
@@ -4,7 +4,13 @@ description = "A new regular expression language"
 version = "0.1.0"
 edition = "2021"
 authors = ["Ludwig Stecher <ludwig.stecher@gmx.de>"]
-license = "MIT or Apache-2"
+license = "MIT OR Apache-2.0"
+homepage = "https://github.com/Aloso/rulex"
+repository = "https://github.com/Aloso/rulex"
+documentation = "https://docs.rs/rulex"
+readme = "../README.md"
+keywords = ["regexp", "regex", "syntax", "parser", "rulex"]
+categories = ["text-processing", "parser-implementations"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
