--- a/rulex-macro/Cargo.toml
+++ b/rulex-macro/Cargo.toml
@@ -4,7 +4,12 @@ description = "Macro for converting rulex expressions to regexes"
 version = "0.1.0"
 edition = "2021"
 authors = ["Ludwig Stecher <ludwig.stecher@gmx.de>"]
-license = "MIT or Apache-2"
+license = "MIT OR Apache-2.0"
+homepage = "https://github.com/Aloso/rulex/blob/main/rulex-macro"
+repository = "https://github.com/Aloso/rulex"
+documentation = "https://docs.rs/rulex-macro"
+keywords = ["macro", "regexp", "regex", "rulex"]
+categories = ["text-processing"]
 
 [lib]
 proc-macro = true
