--- a/benchmark/Cargo.toml
+++ b/benchmark/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 
 [dependencies]
 rulex = { version = "0.2.0", path = "../rulex-lib" }
-criterion = "0.3.5"
+criterion = { git = "https://github.com/bheisler/criterion.rs", branch = "version-0.4" }
 
 [[bench]]
 # run benchmarks with `cargo criterion -p rulex`
