--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,8 +3,14 @@ name: Test
 on:
   push:
     branches: [main]
+    paths-ignore:
+      - "book/**"
+      - "README.md"
   pull_request:
     branches: [main]
+    paths-ignore:
+      - "book/**"
+      - "README.md"
 
 jobs:
   rustfmt:
