--- a/rulex-lib/Cargo.toml
+++ b/rulex-lib/Cargo.toml
@@ -26,6 +26,7 @@ miette = { version = "4.2.1", optional = true }
 [dev-dependencies]
 atty = "0.2.14"
 once_cell = "1.9.0"
+regex = "1.5.5"
 
 [[test]]
 name = "it"
