--- a/rulex-macro/Cargo.toml
+++ b/rulex-macro/Cargo.toml
@@ -15,7 +15,7 @@ categories = ["text-processing"]
 proc-macro = true
 
 [features]
-default = ["diagnostics"]
+default = []
 diagnostics = []
 
 [dependencies]
