Finish move to new org

--- a/rulex-bin/Cargo.toml
+++ b/rulex-bin/Cargo.toml
@@ -5,8 +5,8 @@ version = "0.3.0"
 edition = "2021"
 authors = ["Ludwig Stecher <ludwig.stecher@gmx.de>"]
 license = "MIT OR Apache-2.0"
-homepage = "https://github.com/Aloso/rulex"
-repository = "https://github.com/Aloso/rulex"
+homepage = "https://github.com/rulex-rs/rulex"
+repository = "https://github.com/rulex-rs/rulex"
 readme = "README.md"
 keywords = ["regexp", "regex", "rulex"]
 categories = ["text-processing", "command-line-utilities"]
