--- a/rulex-macro/Cargo.toml
+++ b/rulex-macro/Cargo.toml
@@ -5,8 +5,8 @@ version = "0.3.0"
 edition = "2021"
 authors = ["Ludwig Stecher <ludwig.stecher@gmx.de>"]
 license = "MIT OR Apache-2.0"
-homepage = "https://github.com/Aloso/rulex/blob/main/rulex-macro"
-repository = "https://github.com/Aloso/rulex"
+homepage = "https://github.com/rulex-rs/rulex/blob/main/rulex-macro"
+repository = "https://github.com/rulex-rs/rulex"
 documentation = "https://docs.rs/rulex-macro"
 keywords = ["macro", "regexp", "regex", "rulex"]
 categories = ["text-processing"]
