--- a/rulex-lib/Cargo.toml
+++ b/rulex-lib/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
 name = "rulex"
 description = "A new regular expression language"
-version = "0.3.0"
+version = "0.4.0"
 edition = "2021"
 authors = ["Ludwig Stecher <ludwig.stecher@gmx.de>"]
 license = "MIT OR Apache-2.0"
-homepage = "https://github.com/rulex-rs/rulex"
+homepage = "https://rulex-rs.github.io"
 repository = "https://github.com/rulex-rs/rulex"
 documentation = "https://docs.rs/rulex"
 readme = "../README.md"
@@ -20,14 +20,14 @@ default = []
 dbg = []
 
 [dependencies]
-thiserror = "1.0.30"
+thiserror = "1.0.31"
 nom = "7.1.0"
-miette = { version = "4.2.1", optional = true }
+miette = { version = "4.7.1", optional = true }
 
 [dev-dependencies]
 atty = "0.2.14"
-once_cell = "1.9.0"
-regex = "1.5.5"
+once_cell = "1.12.0"
+regex = "1.5.6"
 
 [[test]]
 name = "it"
