--- a/rulex-lib/Cargo.toml
+++ b/rulex-lib/Cargo.toml
@@ -23,6 +23,7 @@ dbg = []
 thiserror = "1.0.31"
 nom = "7.1.0"
 miette = { version = "4.7.1", optional = true }
+arbitrary = { version = "1.1.2", features = ["derive"], optional = true }
 
 [dev-dependencies]
 atty = "0.2.14"
