--- a/rulex-lib/Cargo.toml
+++ b/rulex-lib/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "rulex"
 description = "A new regular expression language"
-version = "0.4.2"
+version = "0.4.3"
 edition = "2021"
 authors = ["Ludwig Stecher <ludwig.stecher@gmx.de>"]
 license = "MIT OR Apache-2.0"
@@ -11,7 +11,7 @@ documentation = "https://docs.rs/rulex"
 readme = "../README.md"
 keywords = ["regexp", "regex", "syntax", "parser", "rulex"]
 categories = ["text-processing", "parser-implementations"]
-exclude = ["tests/**"]
+exclude = ["tests/**", "fuzz/**", "afl-fuzz/**"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
