--- a/rulex-lib/Cargo.toml
+++ b/rulex-lib/Cargo.toml
@@ -22,8 +22,15 @@ dbg = []
 [dependencies]
 thiserror = "1.0.31"
 nom = "7.1.0"
-miette = { version = "4.7.1", optional = true }
-arbitrary = { version = "1.1.2", features = ["derive"], optional = true }
+
+[dependencies.arbitrary]
+version = "1.1.2"
+features = ["derive"]
+optional = true
+
+[dependencies.miette]
+version = "4.7.1"
+optional = true
 
 [dev-dependencies]
 atty = "0.2.14"
