--- a/pomsky-bin/Cargo.toml
+++ b/pomsky-bin/Cargo.toml
@@ -21,6 +21,7 @@ path = "src/main.rs"
 [dependencies]
 atty = "0.2.14"
 thiserror = "1.0.30"
+owo-colors = { version = "3.4.0", features = ["supports-color"] }
 
 [dependencies.miette]
 version = "4.2.1"
