--- a/benchmark/Cargo.toml
+++ b/benchmark/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 pomsky = { version = "0.5.0", path = "../pomsky-lib" }
 criterion = { git = "https://github.com/bheisler/criterion.rs", branch = "version-0.4" }
+melody_compiler = "0.18.1"
 
 [[bench]]
 # run benchmarks with `cargo criterion -p pomsky`
