Move all expressions into dedicated module

--- a/pomsky-bin/Cargo.toml
+++ b/pomsky-bin/Cargo.toml
@@ -35,4 +35,4 @@ features = ["dbg", "miette", "suggestions"]
 [dependencies.clap]
 version = "3.1.0"
 default-features = false
-features = ["std", "derive", "wrap_help"]
+features = ["std", "derive", "wrap_help", "color"]
