--- a/pomsky-wasm/Cargo.toml
+++ b/pomsky-wasm/Cargo.toml
@@ -3,9 +3,13 @@ members = ["."]
 
 [package]
 name = "pomsky-wasm"
+description = "A new regular expression language"
+homepage = "https://pomsky-lang.org"
 version = "0.1.0"
 authors = ["Ludwig Stecher <ludwig.stecher@gmx.de>"]
 edition = "2021"
+license = "MIT OR Apache-2.0"
+repository = "https://github.com/rulex-rs/pomsky"
 
 [lib]
 crate-type = ["cdylib", "rlib"]
