--- a/pomsky-wasm/Cargo.toml
+++ b/pomsky-wasm/Cargo.toml
@@ -16,6 +16,7 @@ crate-type = ["cdylib", "rlib"]
 
 [features]
 default = ["console_error_panic_hook", "wee_alloc"]
+suggestions = ["pomsky/suggestions"]
 
 [dependencies]
 wasm-bindgen = "0.2.82"
