--- a/rulex-bin/Cargo.toml
+++ b/rulex-bin/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
 name = "rulex-bin"
-description = "Compile rulex expressions, a new regular expression language"
-version = "0.4.3"
+description = "DEPRECATED: Use pomsky-bin instead. Compile rulex expressions, a new regular expression language"
+version = "0.4.5"
 edition = "2021"
 authors = ["Ludwig Stecher <ludwig.stecher@gmx.de>"]
 license = "MIT OR Apache-2.0"
-homepage = "https://github.com/rulex-rs/rulex"
-repository = "https://github.com/rulex-rs/rulex"
+homepage = "https://pomsky-lang.org"
+repository = "https://github.com/rulex-rs/pomsky"
 readme = "README.md"
 keywords = ["regexp", "regex", "rulex"]
 categories = ["text-processing", "command-line-utilities"]
@@ -24,7 +24,7 @@ thiserror = "1.0.30"
 miette = { version = "4.2.1", features = ["fancy"] }
 
 [dependencies.rulex]
-version = "0.4.3"
+version = "0.4.4"
 path = "../rulex-lib"
 features = ["dbg", "miette"]
 
