--- a/pomsky-syntax/Cargo.toml
+++ b/pomsky-syntax/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "pomsky"
-description = "A new regular expression language"
-version = "0.6.0"
+name = "pomsky-syntax"
+description = "Parser for pomsky, a new regular expression language"
+version = "0.1.0"
 edition = "2021"
 authors = ["Ludwig Stecher <ludwig.stecher@gmx.de>"]
 license = "MIT OR Apache-2.0"
@@ -11,35 +11,20 @@ documentation = "https://docs.rs/pomsky"
 readme = "../README.md"
 keywords = ["regexp", "regex", "syntax", "parser", "pomsky"]
 categories = ["text-processing", "parser-implementations"]
-exclude = ["tests/**", "fuzz/**", "afl-fuzz/**"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [features]
 default = []
-dbg = ["pomsky-syntax/pretty-print"]
-suggestions = ["pomsky-syntax/suggestions"]
+pretty-print = []
+suggestions = ["strsim"]
 
 [dependencies]
+nom = "7.1.1"
 thiserror = "1.0.32"
-pomsky-syntax = { version = "0.1.0", path = "../pomsky-syntax" }
+strsim = { version = "0.10.0", optional = true }
 
 [dependencies.arbitrary]
 version = "1.1.3"
 features = ["derive"]
 optional = true
-
-[dependencies.miette]
-version = "4.7.1"
-features = ["fancy"]
-optional = true
-
-[dev-dependencies]
-atty = "0.2.14"
-once_cell = "1.13.0"
-regex = "1.6.0"
-
-[[test]]
-name = "it"
-path = "./tests/it/main.rs"
-harness = false
