--- a/pomsky-lib/Cargo.toml
+++ b/pomsky-lib/Cargo.toml
@@ -23,16 +23,8 @@ suggestions = ["pomsky-syntax/suggestions"]
 [dependencies]
 thiserror = "1.0.32"
 pomsky-syntax = { version = "0.1.0", path = "../pomsky-syntax" }
-
-[dependencies.arbitrary]
-version = "1.1.3"
-features = ["derive"]
-optional = true
-
-[dependencies.miette]
-version = "4.7.1"
-features = ["fancy"]
-optional = true
+arbitrary = { version = "1.1.3", features = ["derive"], optional = true }
+miette = { version = "4.7.1", features = ["fancy"], optional = true }
 
 [dev-dependencies]
 atty = "0.2.14"
