--- a/pomsky-wasm/Cargo.toml
+++ b/pomsky-wasm/Cargo.toml
@@ -3,9 +3,9 @@ members = ["."]
 
 [package]
 name = "pomsky-wasm"
-description = "A new regular expression language"
+description = "A portable, modern regular expression language"
 homepage = "https://pomsky-lang.org"
-version = "0.1.2"
+version = "0.1.3"
 authors = ["Ludwig Stecher <ludwig.stecher@gmx.de>"]
 edition = "2021"
 license = "MIT OR Apache-2.0"
@@ -32,4 +32,4 @@ wasm-bindgen-test = "0.3.32"
 
 [profile.release]
 # Tell `rustc` to optimize for small code size.
-opt-level = "s"
+opt-level = "z"
