--- a/pomsky-wasm/pkg/package.json
+++ b/pomsky-wasm/pkg/package.json
@@ -3,8 +3,8 @@
   "collaborators": [
     "Ludwig Stecher <ludwig.stecher@gmx.de>"
   ],
-  "description": "A new regular expression language",
-  "version": "0.1.2",
+  "description": "A portable, modern regular expression language",
+  "version": "0.1.3",
   "license": "MIT OR Apache-2.0",
   "repository": {
     "type": "git",
