--- a/pomsky-lib/Cargo.toml
+++ b/pomsky-lib/Cargo.toml
@@ -29,6 +29,7 @@ miette = { version = "5.3.1", features = ["fancy"], optional = true }
 atty = "0.2.14"
 once_cell = "1.14.0"
 regex = "1.6.0"
+pcre2 = "0.2.3"
 
 [[test]]
 name = "it"
