--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,6 +9,14 @@ on:
       - 'v[0-9]+.*'
 
 jobs:
+  security_audit:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions-rs/audit-check@v1
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+
   create_release:
     name: Create release
     runs-on: ubuntu-latest
@@ -48,6 +56,7 @@ jobs:
 
             You might have to add the `.cargo/bin` folder to your `PATH` afterwards.
             Please file issues if you run into any problems or have suggestions.
+
   release_assets:
     name: Release assets
     needs: create_release
@@ -67,7 +76,7 @@ jobs:
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Print information
         run: |
@@ -78,8 +87,11 @@ jobs:
         id: vars
         run: echo ::set-output name=tag::${GITHUB_REF#refs/*/}
 
+      - name: Install build dependencies
+        run: cargo install cargo-auditable
+
       - name: Build project
-        run: cargo build --release --locked
+        run: cargo auditable build --release --locked
 
       - name: Upload release assets
         uses: actions/upload-release-asset@v1
