--- a/pomsky-lib/afl-fuzz/Cargo.toml
+++ b/pomsky-lib/afl-fuzz/Cargo.toml
@@ -10,6 +10,8 @@ edition = "2021"
 [dependencies]
 afl = "0.12.4"
 arbitrary = "1.1.3"
+regex = "1.7.0"
+pcre2 = "0.2.3"
 
 [dependencies.pomsky]
 path = ".."
