feat: add --json flag, move help to new crate

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ members = [
     "./pomsky-syntax",
     "./pomsky-bin",
     "./pomsky-macro",
+    "./helptext",
     "./benchmark",
 ]
 default-members = ["./pomsky-bin", "./pomsky-lib", "./pomsky-syntax"]
