--- a/pomsky-bin/Cargo.toml
+++ b/pomsky-bin/Cargo.toml
@@ -23,6 +23,8 @@ atty = "0.2.14"
 lexopt = "0.2.1"
 supports-color = "1.3.0"
 helptext = { version = "0.1.0", path = "../helptext" }
+serde_json = "1.0.91"
+serde = { version = "1.0.152", features = ["derive"] }
 
 [dependencies.miette]
 version = "5.3.1"
