--- a/pomsky-lib/Cargo.toml
+++ b/pomsky-lib/Cargo.toml
@@ -26,6 +26,8 @@ arbitrary = { version = "1.1.3", features = ["derive"], optional = true }
 miette = { version = "5.3.1", features = ["fancy"], optional = true }
 
 [dev-dependencies]
+lexopt = "0.2.1"
+tokio = { version = "1.24.1", features = ["rt-multi-thread", "sync", "io-util", "process"] }
 atty = "0.2.14"
 once_cell = "1.14.0"
 regex = "1.7.0"
