--- a/pomsky-lib/Cargo.toml
+++ b/pomsky-lib/Cargo.toml
@@ -27,7 +27,7 @@ miette = { version = "5.3.1", features = ["fancy"], optional = true }
 
 [dev-dependencies]
 lexopt = "0.2.1"
-tokio = { version = "1.24.1", features = ["rt-multi-thread", "sync", "io-util", "process"] }
+tokio = { version = "1.24.1", features = ["rt-multi-thread", "sync", "net", "io-util", "process"] }
 atty = "0.2.14"
 once_cell = "1.14.0"
 regex = "1.7.0"
