--- a/pomsky-lib/Cargo.toml
+++ b/pomsky-lib/Cargo.toml
@@ -27,11 +27,11 @@ miette = { version = "5.3.1", features = ["fancy"], optional = true }
 
 [dev-dependencies]
 lexopt = "0.2.1"
-tokio = { version = "1.24.1", features = ["rt-multi-thread", "sync", "net", "io-util", "process"] }
+tokio = { version = "1.24.1", features = ["rt-multi-thread"] }
 atty = "0.2.14"
 once_cell = "1.14.0"
 regex = "1.7.0"
-pcre2 = "0.2.3"
+regex-test = { path = "../regex-test" }
 
 [[test]]
 name = "it"
