--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -52,19 +52,10 @@ jobs:
       - uses: actions/checkout@v3
       - name: Install Rust toolchain
         uses: dtolnay/rust-toolchain@stable
-
-      - name: ⚡ Cache
-        uses: actions/cache@v3
-        with:
-          path: |
-            ~/.cargo/registry
-            ~/.cargo/git
-            target
-          key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
-
+      - name: Cache
+        uses: Swatinem/rust-cache@v2
       - name: Build and run tests
-        run: |
-          cargo test
+        run: cargo test
 
   coverage:
     runs-on: ubuntu-latest
