--- a/pomsky-lib/fuzz/Cargo.toml
+++ b/pomsky-lib/fuzz/Cargo.toml
@@ -3,15 +3,15 @@ name = "pomsky-fuzz"
 version = "0.0.0"
 authors = ["Automatically generated"]
 publish = false
-edition = "2018"
+edition = "2021"
 
 [package.metadata]
 cargo-fuzz = true
 
 [dependencies]
 libfuzzer-sys = "0.4"
-regex = "1.7.0"
-pcre2 = "0.2.3"
+regex-test = { path = "../../regex-test", features = ["sync"] }
+once_cell = "1.17.0"
 
 [dependencies.pomsky]
 path = ".."
