--- a/regex-test/Cargo.toml
+++ b/regex-test/Cargo.toml
@@ -7,7 +7,7 @@ publish = false
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [features]
-default = ["async"]
+default = ["sync"]
 async = ["dep:tokio"]
 sync = []
 
