--- a/pomsky-lib/Cargo.toml
+++ b/pomsky-lib/Cargo.toml
@@ -31,7 +31,7 @@ tokio = { version = "1.24.1", features = ["rt-multi-thread"] }
 atty = "0.2.14"
 once_cell = "1.14.0"
 regex = "1.7.0"
-regex-test = { path = "../regex-test" }
+regex-test = { path = "../regex-test", features = ["async"], default-features = false}
 
 [[test]]
 name = "it"
