--- a/pomsky-lib/fuzz/Cargo.toml
+++ b/pomsky-lib/fuzz/Cargo.toml
@@ -10,7 +10,7 @@ cargo-fuzz = true
 
 [dependencies]
 libfuzzer-sys = "0.4"
-regex-test = { path = "../../regex-test", features = ["sync"] }
+regex-test = { path = "../../regex-test" }
 once_cell = "1.17.0"
 
 [dependencies.pomsky]
