update github org and change logo to svg

--- a/pomsky-bin/Cargo.toml
+++ b/pomsky-bin/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 authors = ["Ludwig Stecher <ludwig.stecher@gmx.de>"]
 license = "MIT OR Apache-2.0"
 homepage = "https://pomsky-lang.org/"
-repository = "https://github.com/rulex-rs/pomsky"
+repository = "https://github.com/pomsky-lang/pomsky"
 readme = "README.md"
 keywords = ["regexp", "regex", "pomsky"]
 categories = ["text-processing", "command-line-utilities"]
