--- a/pomsky-macro/Cargo.toml
+++ b/pomsky-macro/Cargo.toml
@@ -5,8 +5,8 @@ version = "0.9.0"
 edition = "2021"
 authors = ["Ludwig Stecher <ludwig.stecher@gmx.de>"]
 license = "MIT OR Apache-2.0"
-homepage = "https://github.com/rulex-rs/pomsky/blob/main/pomsky-macro"
-repository = "https://github.com/rulex-rs/pomsky"
+homepage = "https://github.com/pomsky-lang/pomsky/blob/main/pomsky-macro"
+repository = "https://github.com/pomsky-lang/pomsky"
 documentation = "https://docs.rs/pomsky-macro"
 keywords = ["macro", "regexp", "regex", "pomsky"]
 categories = ["text-processing"]
