--- a/pomsky-wasm/Cargo.toml
+++ b/pomsky-wasm/Cargo.toml
@@ -9,7 +9,7 @@ version = "0.9.1"
 authors = ["Ludwig Stecher <ludwig.stecher@gmx.de>"]
 edition = "2021"
 license = "MIT OR Apache-2.0"
-repository = "https://github.com/rulex-rs/pomsky"
+repository = "https://github.com/pomsky-lang/pomsky"
 
 [lib]
 crate-type = ["cdylib", "rlib"]
