--- a/pomsky-lib/Cargo.toml
+++ b/pomsky-lib/Cargo.toml
@@ -23,15 +23,18 @@ suggestions = ["pomsky-syntax/suggestions"]
 [dependencies]
 pomsky-syntax = { version = "0.9.0", path = "../pomsky-syntax" }
 arbitrary = { version = "1.2.2", features = ["derive"], optional = true }
-miette = { version = "5.5.0", features = ["fancy"], optional = true }
+
+[dependencies.miette]
+version = "5.5.0"
+optional = true
+features = ["fancy-no-backtrace"]
 
 [dev-dependencies]
 lexopt = "0.3.0"
-tokio = { version = "1.24.2", features = ["rt-multi-thread"] }
 atty = "0.2.14"
 once_cell = "1.17.0"
 regex = "1.7.1"
-regex-test = { path = "../regex-test", features = ["async"], default-features = false }
+regex-test = { path = "../regex-test" }
 
 [[test]]
 name = "it"
