--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,5 +13,13 @@ resolver = "2"
 
 [profile.release]
 lto = "thin"
-opt-level = "z"
+opt-level = 2
+incremental = true
+
+[profile.dist]
+inherits = "release"
+lto = "fat"
+opt-level = "s"
+codegen-units = 1
 strip = true
+incremental = false
