--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -51,13 +51,22 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+
       - name: Install Rust toolchain
         uses: dtolnay/rust-toolchain@stable
+
       - name: Setup Java
         uses: actions/setup-java@v3
         with:
           java-version: '17'
           distribution: temurin
+
+      - name: Setup .NET
+        uses: actions/setup-dotnet@v3
+        if: ${{ matrix.os }} == 'ubuntu-latest'
+        with:
+          dotnet-version: '7.x.x'
+
       - name: Cache
         uses: Swatinem/rust-cache@v2
       - name: Build and run tests
