--- a/pomsky-wasm/Cargo.toml
+++ b/pomsky-wasm/Cargo.toml
@@ -2,10 +2,10 @@
 members = ["."]
 
 [package]
-name = "pomsky-wasm"
+name = "compiler-web"
 description = "A portable, modern regular expression language"
 homepage = "https://pomsky-lang.org"
-version = "0.9.1"
+version = "0.10.0"
 authors = ["Ludwig Stecher <ludwig.stecher@gmx.de>"]
 edition = "2021"
 license = "MIT OR Apache-2.0"
@@ -19,13 +19,13 @@ default = ["console_error_panic_hook"]
 suggestions = ["pomsky/suggestions"]
 
 [dependencies]
-wasm-bindgen = "0.2.83"
+wasm-bindgen = "0.2.84"
 
 console_error_panic_hook = { version = "0.1.7", optional = true }
 
-pomsky = { version = "0.9.0", features = ["miette"] }
+pomsky = { version = "0.10.0", path = "../pomsky-lib", features = ["miette"] }
 
-miette = { version = "5.5.0", features = ["fancy"] }
+miette = { version = "5.6.0", features = ["fancy"] }
 
 [dev-dependencies]
 wasm-bindgen-test = "0.3.33"
