--- a/pomsky-wasm/justfile
+++ b/pomsky-wasm/justfile
@@ -1,6 +1,6 @@
 set export
 
-just_msg := "\nDone. Make sure to add 'snippets' to the 'files' array in package.json!\nCheck if you set to package name correctly!\nDon't forget to publish with  --access=public!\n"
+just_msg := "\nDone. Make sure to add 'snippets' to the 'files' array in package.json!\nCheck if you set to package name correctly!\nNow copy the appropriate README to the pkg/ directory.\nDon't forget to publish with  --access=public!\n"
 
 build-web:
     wasm-pack build --target=web --scope=pomsky-lang -- --features suggestions
