--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,3 +23,6 @@ opt-level = "s"
 codegen-units = 1
 strip = true
 incremental = false
+
+[patch.crates-io]
+onig_sys = { git = "https://github.com/rust-onig/rust-onig", revision = "fa90c0e97e90a056af89f183b23cd417b59ee6a2" }
