--- a/pomsky-syntax/Cargo.toml
+++ b/pomsky-syntax/Cargo.toml
@@ -17,7 +17,7 @@ categories = ["text-processing", "parser-implementations"]
 [features]
 default = []
 dbg = []
-suggestions = ["strsim"]
+suggestions = ["dep:strsim"]
 
 [dependencies]
 strsim = { version = "0.10.0", optional = true }
