--- a/benchmark/Cargo.toml
+++ b/benchmark/Cargo.toml
@@ -8,10 +8,10 @@ publish = false
 
 [dependencies]
 pomsky = { version = "0.10.0", path = "../pomsky-lib" }
-criterion = "0.5.1"
-melody_compiler = "0.18.1"
+divan = "0.1.2"
+melody_compiler = "0.19.0"
 
 [[bench]]
-# run benchmarks with `cargo criterion -p pomsky`
+# run benchmarks with `cargo bench -p benchmark`
 name = "main"
 harness = false
