--- a/pomsky-lib/afl-fuzz/justfile
+++ b/pomsky-lib/afl-fuzz/justfile
@@ -1,2 +1,2 @@
 tmin input:
-    cargo afl tmin -i {{input}} -o out.txt -- ./target/debug/afl-fuzz
+    AFL_DEBUG=1 AFL_MAP_SIZE=100000 cargo afl tmin -i {{input}} -o out.txt -- ./target/debug/afl-fuzz
