--- a/pomsky-lib/afl-fuzz/Cargo.toml
+++ b/pomsky-lib/afl-fuzz/Cargo.toml
@@ -10,6 +10,7 @@ edition = "2021"
 [dependencies]
 afl = "0.14.3"
 arbitrary = "1.3.2"
+regex = "1"
 regex-test = { path = "../../regex-test" }
 pomsky = { path = "..", features = ["arbitrary"] }
 
