--- a/pomsky-wasm/Cargo.toml
+++ b/pomsky-wasm/Cargo.toml
@@ -19,13 +19,14 @@ default = ["console_error_panic_hook"]
 suggestions = ["pomsky/suggestions"]
 
 [dependencies]
-wasm-bindgen = "0.2.84"
+wasm-bindgen = "0.2.88"
+js-sys = "0.3.65"
 
 console_error_panic_hook = { version = "0.1.7", optional = true }
 
-pomsky = { version = "0.10.0", path = "../pomsky-lib", features = ["miette"] }
+pomsky = { version = "0.11.0", path = "../pomsky-lib", features = ["miette"] }
 
-miette = { version = "5.6.0", features = ["fancy"] }
+miette = { version = "5.10.0", features = ["fancy"] }
 
 [dev-dependencies]
 wasm-bindgen-test = "0.3.33"
